<resources>
    <string name="desc"></string>
    <string name="action_settings">Settings</string>
    <string name="str_about_sf">About SF</string>
    <string name="str_licenses">Licenses</string>
    <string name="str_terms_and_use">Terms of Use</string>
    <string name="action_share">Share</string>
    <string name="action_search">Search</string>
    <string name="str_sign_out">Sign Out</string>
    <string name="str_sign_in">Sign In</string>
    <string name="str_about">About Coolflix</string>
    <string name="str_feedback">Feedback</string>
    <string name="device_search">Search Device</string>
    <string name="or">OR</string>
    <string name="search_hint">Search Coolflix</string>
    <string name="authority">com.viewlift.coolflix.app.provider.MovieSuggestionProvider</string>
    <string name="remove_from_queue_msg">Do you want to remove from Queue?</string>
    <string name="add_to_queue_msg">Do you want to add to Queue?</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_title"><b>SNAG</b>FILMS</string>
    <string name="film_title">SNAGFILMS</string>
    <string name="snag_select_label">Snag Select</string>
    <string name="hot_on_snag_label">Hot On Snag</string>
    <string name="Recommended_label">Recommended</string>
    <string name="recommendations">Recommendations</string>
    <string name="dynamic_lead_label">Featured</string>
    <string name="close">close</string>
    <string name="det_image">FilmImage</string>
    <string name="snagfilms">filmrise</string>
    <string name="fans">fans </string>
    <string name="criticwire">CriticWire</string>
    <string name="releasedate">Release Date</string>
    <string name="runtime">Run Time</string>
    <string name="watchfilm">Watch Now</string>
    <string name="add_queue_button_text">Queue</string>
    <string name="remove_queue_button_text">Queue</string>
    <string name="trailer">Watch trailer</string>
    <string name="trailnclips">Trailers and Clips</string>
    <string name="relatedfilms">Related Films</string>
    <string name="more_detail">MORE</string>
    <string name="no_info">Film Information Not Available</string>
    <string name="cast">Cast</string>
    <string name="crew">Crew</string>
    <string name="cast_">Cast:</string>
    <string name="age_gate_text">I certify that the information provided is true and accurate.</string>
    <string-array name="nav_drawer_titles">
        <item>Featured</item>
        <item>Shows</item>
        <item>Me</item>
        <item>Contact Us</item>
    </string-array>
    <string-array name="nav_drawer_titles_Cineroar">
        <item>Featured</item>
        <item>Me</item>
        <item>Contact Us</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="signup">Or Sign Up With your email</string>
    <string name="signedup">Already Signed Up With Email? </string>
    <string name="login">Sign In</string>
    <string name="start_your_trail">Start Your Free Trial</string>
    <string name="newuser">Not a user yet?</string>
    <string name="signin_signup">Sign up with your email</string>
    <string name="signin_help">Need further help?</string>
    <string name="forgotpass">Forgot your password?</string>
    <string name="forgot_email_address_title">Forgot Email Address</string>
    <string name="forgot_email_address_message">Please contact [customercare@coolflix.com] to retrieve your login info.</string>
    <string name="signup_info">Login with Facebook,Twitter,or Google,or you can also login with your 
                              email address below. </string>
    <string name="add_pic">Add profile picture</string>
    <string name="tap_to_add_pic">Tap to add or change your profile picture</string>
    <string name="already_signup">Already signed up?</string>
    <string name="log">Log In</string>
    <string name="service_and_policy">By signing up you are agreeing to our Terms of Service
                  and Privacy Policy</string>
    <string name="title_activity_sign_in_screen">SignInScreen</string>
    <string name="title_activity_sign_up_screen">SignUpScreen</string>
    <string name="enter_email">Email Address</string>
    <string name="enter_password">Password</string>
    <string name="enter_fullname">FullName</string>
    <string name="enter_confirm_password">Confirm Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_dob">Enter Your Birthday</string>
    <string name="pin">Pin</string>
    <string name="alllogin_text">Login To Get Started</string>
    <string name="alllogin_textalt">Log in to get started.</string>
    <string name="subtitle">Not already a member? SignUp   </string>
    <string name="subtitleHere"> here.</string>
    <string name="forgot_password">Reset Password</string>
    <string name="forgot_password_desc">Enter the email address you used to create your account and we will email you instructions on how to reset your password.</string>
    <string name="email">E-mail Address</string>
    <string name="submit">Submit</string>
    <string name="submit_msg">Password reset successfully</string>
    <string name="register_account">Register For A Coolflix Account</string>
    <string name="name">Name</string>
    <string name="password">Enter Password</string>
    <string name="repassword">Re enter Password</string>
    <string name="hide">Hide?</string>
    <string name="cancel">Cancel</string>
    <string name="continue_caps">CONTINUE</string>
    <string name="cancel_caps">CANCEL</string>
    <string name="registerforsnagfilms">Register for Coolflix Account</string>
    <string name="errormessage">[Error msg goes here]</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="snagfilm">SNAGFILMS</string>
    <string name="forgot_email_address">Forgot your email address?</string>
    <string name="subscibe">Subscribe Now</string>
    <string name="browse">Browse </string>
    <string name="discover">Discover Something Different</string>
    <string name="register">Sign Up</string>
    <string name="account">Already have an account?</string>
    <string name="newregister">New to filmrise?Register an account today</string>
    <string name="emailfortwitter">Enter Email address</string>
    <string name="username">Username</string>
    <string name="sometext">This Time It’s Personal</string>
    <string name="sub_header_text">Sign in to get recommendations tailored just for you.</string>
    <string name="logintext">Log in with Facebook</string>
    <string name="promo_headline">[Promo Headline Goes Here]</string>
    <string name="sub_headline">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</string>
    <string name="sub_headline_more">Aenean commodo ligula eget dolor.</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="googleplus">Google+</string>
    <string name="sloganWelcome">Discover Something Different</string>
    <string name="ok">OK</string>
    <string name="cancel_dialog">CANCEL</string>
    <string name="please_login">Please log in </string>
    <string name="accept_push">Accept Push Notifications</string>
    <string name="closed_captioning">Closed Captioning</string>
    <string name="auto_play">Autoplay</string>
    <string name="play_next_movie">[Play next movie automatically]</string>
    <string name="playback">PLAYER SETTINGS</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="captions">Captions</string>
    <string name="myaccount">MY ACCOUNT</string>
    <string name="subricption_info">Subscription Information</string>
    <string name="personal_info">Personal Information</string>
    <string name="policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="continue_">Continue</string>
    <string name="about_us">About Us</string>
    <string name="board_of_directors">Board of Directors</string>
    <string name="terms">Terms of Service</string>
    <string name="description">Media Controls</string>
    <string name="closed_captions">Closed Captions</string>
    <string name="english">English</string>
    <string name="off">Off</string>
    <string name="screen_size">Screen Size</string>
    <string name="full">Full</string>
    <string name="wide">Wide</string>
    <string name="add_to_queue">Add To Queue</string>
    <string name="remove_from_queue">Remove From Queue</string>
    <string name="already_in_queue">Already In Queue</string>
    <string name="no_history">No History</string>
    <string name="history">History</string>
    <string name="captions_style">Caption Style</string>
    <string name="white_with_shadow">White with Shadow</string>
    <string name="black_on_white">Black on White</string>
    <string name="white_on_black">White on Black</string>
    <string name="yellow_on_black">Yellow on Black</string>
    <string name="btn_caption_cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="session_reconnection_attempt">Attempting to recover previous session&#8230;</string>
    <string name="standard_options">STANDARD OPTIONS</string>
    <string name="text_size">Text Size</string>
    <string name="selected_text_Size">Large</string>
    <string name="caption_style">Caption Style</string>
    <string name="selected_caption_style">White with Shadow</string>
    <string name="no_media_info">No media information available</string>
    <string name="small">Small</string>
    <string name="Large">Large</string>
    <string name="normal">Normal</string>
    <string name="extra_large">Extra Large</string>
    <string name="extra_small">Extra Small</string>
    <string name="coverArt">coverArt</string>
    <string name="failed_status_request">Failed to sync up with the cast device</string>
    <string name="failed_to_find_app">The application you are trying to launch is not available on your Chromecast device</string>
    <string name="failed_app_launch_timeout">The request to launch the application has timed out!</string>
    <string name="failed_to_launch_app">Failed to launch application</string>
    <string name="failed_to_play">Failed to start the playback of media</string>
    <string name="failed_to_stop">Failed to stop the playback of media</string>
    <string name="failed_to_pause">Failed to pause the playback of media</string>
    <string name="failed_unknown">An unknown error was encountered</string>
    <string name="failed_seek">Failed to seek to the new position on the cast device</string>
    <string name="error">Error</string>
    <string name="failed_to_connect">Could not connect to the device</string>
    <string name="failed_setting_volume">Failed to set the volume</string>
    <string name="failed_no_connection">No connection to the cast device is present</string>
    <string name="failed_no_connection_short">No connection</string>
    <string name="failed_no_connection_trans">Connection to the cast device has been lost. Application is trying to re-establish the connection, if possible. Please wait for a few seconds and try again.</string>
    <string name="failed_perform_action">Failed to perform the action</string>
    <string name="failed_load">Failed to load media on the cast device</string>
    <string name="failed_receiver_player_error">Receiver player has encountered a sever error</string>
    <string name="failed_authorization_timeout">Authorization timed out</string>
    <string name="media_route_menu_title">Media Route</string>
    <string name="casting_to_device">Casting to %1$s</string>
</resources>