<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/tv_closed_captions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/closed_captions"
     	android:textColor="@color/white"
        android:textSize="@dimen/player_settings_title"
        />
   
     <RelativeLayout 
        android:id="@+id/rl_english_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/player_margin_top"
    
        >
	<TextView
        android:id="@+id/tv_english"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/english"
		android:textColor="@color/white"
        android:textSize="@dimen/player_sub_items"
        android:clickable="true"
 
        />
	<TextView
        android:id="@+id/tv_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/off"
   		android:layout_toRightOf="@id/tv_english"
   		android:layout_marginLeft="@dimen/player_margin_off"
   		android:textColor="@android:color/holo_blue_light"
        android:textSize="@dimen/player_sub_items"
        android:clickable="true"
 
        />
	</RelativeLayout>
	<View 
	    android:id="@+id/v_horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="@dimen/captions_view_height"
	    android:background="@color/white"
	   	 android:textColor="@color/white"
	    android:layout_marginBottom="@dimen/player_margin"
	    />
	
	
	<TextView
        android:id="@+id/tv_screen_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen_size"
        android:textSize="@dimen/player_settings_title"
        android:textColor="@color/white"
        />
    <RelativeLayout 
        android:id="@+id/rl_full_wide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
	<TextView
        android:id="@+id/tv_full"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full"
        android:textSize="@dimen/player_sub_items"
  		android:clickable="true"
  	  	android:textColor="@color/white"
        />
	<TextView
        android:id="@+id/tv_wide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wide"
        android:layout_toRightOf="@id/tv_full"
   		android:layout_marginLeft="@dimen/player_margin_wide"
        android:textSize="@dimen/player_sub_items"
        android:clickable="true"
       android:textColor="@android:color/holo_blue_light"
        />
	</RelativeLayout>
</LinearLayout>