<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dialog_alllogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_media_title_top_margin_phone"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            
            android:text="@string/alllogin_text"
            android:textColor="@color/body_text_primary"
            android:textSize="@dimen/all_media_sub_header_text_size"
            />

        <LinearLayout
            android:id="@+id/dialog_allloginlinear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_button_top_margin"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/dialog_alllogin_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/subtitle"
                android:textColor="@color/body_text_primary"
                android:textSize="@dimen/all_media_body_text_size"
               
                />

            <TextView
                android:id="@+id/dialog_alllogin_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/all_login_marginLeft"
                android:clickable="true"
                android:fontFamily="sans-serif-light"
                android:onClick="true"
                android:text="@string/subtitleHere"
                android:textColor="@color/body_text_primary"
                android:textSize="@dimen/all_media_body_text_size"
                android:visibility="gone"
                />
        </LinearLayout>

        <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_bottom_image"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
         >

        <Button
            android:id="@+id/btn_register"            
            android:layout_width="fill_parent"
            android:layout_height="@dimen/welcome_buttonheight"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_selector_welcome_signin"
            android:fontFamily="sans-serif-light"
            android:text="@string/register"
            android:textColor="@color/phone_welcome_screen_btn_login_text_color"
            android:textSize="@dimen/welcome_button_text_size" />

        <Button
           android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/welcome_buttonheight"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_selector_welcome_facebook"
            android:fontFamily="sans-serif-light"
            android:text="@string/login"
            android:textColor="@color/phone_welcome_screen_btn_register_text_color"
            android:textSize="@dimen/welcome_button_text_size" />
    </LinearLayout>
    </LinearLayout>

</LinearLayout>